# stl2nii

./: .gitignore  Dockerfile  README.md  __main__.py  pyproject.toml  requirements.txt  stltonii.py
bash_utils/: dcm2niixmultipleargs.sh  intersection.sh  sum_all_niftis.sh
stl2nii/: main.py
